syntax = "proto3";

option csharp_namespace = "PostService";

service PostService {
  rpc GetPosts (GetPostsRequest) returns (GetPostsResponse) {}
  rpc GetPost(GetPostRequest) returns (GetPostResponse) {}
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse) {}
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse) {}
}

message GetPostsRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetPostsResponse {
  repeated Post posts = 1;
}

message GetPostRequest {
  string id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
}

message CreatePostResponse {
  Post post = 1;
}

message UpdatePostRequest {
  string id = 1;
  string title = 2;
  string content = 3;
}

message UpdatePostResponse {
  Post post = 1;
}

message DeletePostRequest {
  string id = 1;
}

message DeletePostResponse {
  bool success = 1;
}

message Post {
  string id = 1;
  string title = 2;
  string content = 3;
  string userId = 4;
}